--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     <title>Tamara Boboye - Portfolio</title>
   </head>
   <body>
-    <h3>Hey there, I'm</h3>
-    <h1>Tamara Boboye</h1>
+    <div class="hero">
+      <p>Hey there, I'm</p>
+      <h1>Tamara Boboye</h1>
+      <h2 class="mb-5">Frontend Developer, based in Nigeria</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact Me</a>
+      </div>
+    </div>
   </body>
 </html>
