Added homepage content

--- a/index.html
+++ b/index.html
@@ -32,5 +32,71 @@
         <a href="#" class="btn btn-branding">Contact Me</a>
       </div>
     </div>
+    <p class="text-center m-5">Some of my projects</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weather-app.png"
+            class="img-fluid rounded"
+            alt="weather app"
+          />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              A responsive weather app that provides real-time weather updates
+              based on user search. Integrated with a weather API to fetch
+              accurate forecasts and implemented user interfaces for seamless
+              navigation.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Netflix Clone</h2>
+            <p class="mb-5 text-muted">
+              A responsive Netflix clone built using HTML and CSS. Features
+              dynamic UI, real-time data fetching, and user authentication for
+              personalized content. Overcame user challenges, while refining and
+              expanding usability.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/netflix-clone.png"
+            class="img-fluid rounded"
+            alt="netflix clone"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/random-quote.png"
+            class="img-fluid rounded"
+            alt="random quote generator"
+          />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Quotes App</h2>
+            <p class="mb-5 text-muted">
+              The project aimed to create a dynamic React JS-based Random Quote
+              Generator, showcasing my frontend expertise. Features include
+              fetching random quotes from an API, responsive design for optimal
+              viewing on all devices, and a seamless UI.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
