--- a/index.html
+++ b/index.html
@@ -24,6 +24,43 @@
     <title>Tamara Boboye - Portfolio</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Tamara <span>Boboye</span></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>Hey there, I'm</p>
       <h1>Tamara Boboye</h1>
@@ -55,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="row mb-5">
+      <div class="row mb-5" id="projects">
         <div class="col">
           <div class="project-desciption">
             <h2 class="mb-5">Netflix Clone</h2>
