--- a/work.html
+++ b/work.html
@@ -24,77 +24,42 @@
     <title>Tamara Boboye - My Projects</title>
   </head>
   <body>
-    <h2 class="mb-5 text-center">Some Of My Projects</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <img
-          src="images/weather-app.png"
-          alt="weather project"
-          class="img-fluid rounded"
-        />
-      </div>
-      <div class="col-md-6">
-        <h2 class="mb-3 pt-3">Weather App</h2>
-        <p>
-          A responsive weather app that provides real-time weather updates based
-          on user search. Integrated with a weather API to fetch accurate
-          forecasts and implemented user interfaces for seamless navigation.
-        </p>
-        <div class="mt-5 pb-5">
-          <a
-            class="btn btn-branding-outline"
-            href="https://tamsweatherapp.netlify.app/"
-            target="_blank"
-            >View Project</a
-          >
-        </div>
-      </div>
-    </div>
-    <div class="row mt-10">
-      <div class="col-md-6">
-        <h2 class="mb-3 pt-3">Netflix Clone</h2>
-        <p>
-          A responsive Netflix clone built using HTML and CSS. Features dynamic
-          UI, real-time data fetching, and user authentication for personalized
-          content. Overcame user challenges, while refining and expanding
-          usability.
-        </p>
-        <div class="mt-5 pb-5">
-          <a
-            class="btn btn-branding-outline"
-            href="https://superlative-biscuit-54ead5.netlify.app/"
-            target="_blank"
-            >View Project</a
-          >
-        </div>
-      </div>
-      <div class="col-md-6">
-        <img
-          src="images/netflix-clone.png"
-          alt="random quote generator"
-          class="img-fluid mb-3 rounded"
-        />
-      </div>
-    </div>
-    <div class="row mt-10">
-      <div class="col-md-6">
-        <img src="images/random-quote.png" alt="" class="img-fluid rounded" />
-      </div>
-      <div class="col-md-6">
-        <h2 class="mb-5 pt-3">Quote App</h2>
-        <p>
-          The project aimed to create a dynamic React JS-based Random Quote
-          Generator, showcasing my frontend expertise. Features include fetching
-          random quotes from an API, responsive design for optimal viewing on
-          all devices, and a seamless UI.
-        </p>
-        <div class="mt-3 pb-5">
-          <a
-            class="btn btn-branding-outline"
-            href="https://elaborate-alpaca-1a3f20.netlify.app/"
-            target="_blank"
-            >View Project</a
-          >
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at some of my projects!</h1>
+
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <img
+              src="images/weather-app.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
+          <div class="col-md-4 mb-4">
+            <img
+              src="images/netflix-clone.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Netflix Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-4 mb-4">
+            <img
+              src="images/random-quote.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Quotes App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
         </div>
       </div>
     </div>
