--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <title>Tamara Boboye - Contact Me</title>
   </head>
   <body>
-    <div class="content-container container">
+    <div class="content-container container text-center">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
