--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Tamara <span>Boboye</span></a>
+        <a class="navbar-brand d-none d-md-block" href="index.html"
+          >Tamara <span>Boboye</span></a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -47,9 +49,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="work.html">Projects</a>
