--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Tamara Boboye - Portfolio</title>
   </head>
@@ -65,7 +69,7 @@
       <h1>Tamara Boboye</h1>
       <h2 class="mb-5">Frontend Developer, based in Nigeria</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact Me</a>
+        <a href="#" class="btn btn-branding mt-5">Contact Me</a>
       </div>
     </div>
     <p class="text-center m-5">Some of my projects</p>
@@ -133,6 +137,35 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding"> Contact Me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:tamaraboboye@gmail.com" class="email-link"
+            >tamaraboboye@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="mailto:tamaraboboye@gmail.com"
+            ><i class="bx bxs-envelope"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/tamara-boboye" target="_blank"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
+          <a href="https://github.com/tamarahhh" target="_blank"
+            ><i class="bx bxl-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
