made website SEO friendly

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
               </p>
             </div>
             <div class="navigation-links mb-5">
-              <a href="#" class="btn btn-branding">View My Projects</a>
+              <a href="work.html" class="btn btn-branding">View My Projects</a>
             </div>
           </div>
         </div>
