--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio of Tamara Boboye a frontend developer based in Nigeria, Africa"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +29,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Tamara Boboye - Portfolio</title>
+    <title>Tamara Boboye - Portfolio Profile</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
@@ -47,18 +51,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html" title="About Tamara"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Projects</a>
+              <a class="nav-link" href="work.html" title="Tamara's projects"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="Contact Tamara"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -69,7 +83,7 @@
       <h1>Tamara Boboye</h1>
       <h2 class="mb-5">Frontend Developer, based in Nigeria</h2>
       <div>
-        <a href="#" class="btn btn-branding mt-5">Contact Me</a>
+        <a href="contact.html" class="btn btn-branding mt-5">Contact Me</a>
       </div>
     </div>
     <p class="text-center m-5">Some of my projects</p>
@@ -155,13 +169,19 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="mailto:tamaraboboye@gmail.com"
+          <a href="mailto:tamaraboboye@gmail.com" title="Email"
             ><i class="bx bxs-envelope"></i
           ></a>
-          <a href="https://www.linkedin.com/in/tamara-boboye" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/tamara-boboye"
+            target="_blank"
+            title="Linkedin profile"
             ><i class="bx bxl-linkedin-square"></i
           ></a>
-          <a href="https://github.com/tamarahhh" target="_blank"
+          <a
+            href="https://github.com/tamarahhh"
+            target="_blank"
+            title="Github profile"
             ><i class="bx bxl-github"></i
           ></a>
         </div>
