--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
             <img
               src="images/weather-app.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="weather app project"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
@@ -44,7 +44,7 @@
             <img
               src="images/netflix-clone.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="netflix clone project"
             />
             <h3 class="text-center m-0">Netflix Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -53,7 +53,7 @@
             <img
               src="images/random-quote.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="random quote generator"
             />
             <h3 class="text-center m-0">Quotes App</h3>
             <p class="text-center text-muted">
