updated the footer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:tamaraboboye@gmail.com" class="email-link"
+          <a href="mailto:tamaraboboye@gmail.com" class="email-link mt-5"
             >tamaraboboye@gmail.com</a
           >
         </div>
@@ -184,6 +184,12 @@
             title="Github profile"
             ><i class="bx bxl-github"></i
           ></a>
+        </div>
+        <div class="text-center">
+          <p>
+            This project was coded by Tamara Boboye and is on
+            <a href="https://github.com/Tamarahhh/portfolio-project">Github</a>
+          </p>
         </div>
       </footer>
     </div>
