--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
         <div class="text-center">
           <p>
             This project was coded by Tamara Boboye and is on
-            <a href="https://github.com/Tamarahhh/portfolio-project">Github</a>
+            <a
+              href="https://github.com/Tamarahhh/portfolio-project"
+              target="_blank"
+              >Github</a
+            >
           </p>
         </div>
       </footer>
